...
  ~ SPDX-FileCopyrightText: Copyright (c) 2009 Daniel Svärd <daniel.svard@gmail.com>
  ~ SPDX-FileCopyrightText: Copyright (c) 2009 Nicolas Raoul <nicolas.raoul@gmail.com>
  ~ SPDX-FileCopyrightText: Copyright (c) 2010 Norbert Nagold <norbert.nagold@gmail.com>
  -->
<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Navigation drawer items-->
    <string name="decks" maxLength="28" comment="Open the Deck Picker">Decks</string>
    <string name="card_browser" maxLength="28" comment="Title of the Card Browser, and button to open it.">Card browser</string>
    <string name="statistics" maxLength="28" comment="Title of the Statistics page and button to open it.">Statistics</string>
    <string name="settings" maxLength="28" comment="Title of the Settings page, and button to open it.">Settings</string>
    <string name="help" maxLength="28" comment="Title of the help menu and button to open it.">Help</string>
    <!-- The last entry "Support ankidroid" is in 03-dialogs.-->

...
    <string name="drawing" comment="Menu entry to create a drawing to attach to a card. Also a title.">Drawing</string>

    <!-- Entries of the Support ankidroid menu. -->
    <string name="send_feedback" comment="Menu entry in the 'Help>Support ankidroid' menu, that opens the web page explaining how to send feedback.">Send feedback</string>

    <!-- Study Options-->
    <string name="studyoptions_start" comment="Title of the Reviewer activity. Also the button to open it.">Study</string>

    <!-- DeckPicker.kt -->
    <string name="expand" comment="In the deck picker: accessibility label of the buttons that display the subdecks of a deck.">Expand</string>
    <string name="collapse" comment="In the deck picker: accessibility label of the buttons that hide the subdecks of a deck.">Collapse</string>
    <string name="menu_import" comment="Title of the import page and the button to open it." maxLength="28">Import</string>
    <string name="no_cards_placeholder_title" comment="Text shown the first time AnkiDroid is opened, to explain to the user why they can't yet review.">Collection is empty</string>
...
