...


    <com.ichi2.preferences.HeaderPreference
        android:fragment="com.ichi2.anki.preferences.ReviewerOptionsFragment"
        android:title="@string/new_study_screen"
        android:icon="@drawable/ic_cards_star"
        android:key="@string/new_reviewer_options_key"
        app:summaryEntries="@array/study_screen_summary_entries"
        />

    <!-- Reviewing Preferences -->
    <com.ichi2.preferences.HeaderPreference
        android:fragment="com.ichi2.anki.preferences.ReviewingSettingsFragment"
...
